--- a/main/EFISCO/Pages/_Host.cshtml
+++ b/main/EFISCO/Pages/_Host.cshtml
@@ -36,7 +36,7 @@
     <app>
         <component type="typeof(App)" render-mode="Server" />
     </app>
-
+    <div id="components-reconnect-modal"></div>
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
             An error has occurred. This application may no longer respond until reloaded.
